# PNova

./: .gitignore  .ocamlformat  README.md  dune-project
src/: dune  pnova.ml
src/ast/: free_variables.ml  free_variables.mli  term.ml  term.mli
src/lambda/: beta_reduction.ml  beta_reduction.mli  evaluator.ml  evaluator.mli  substitution.ml  substitution.mli
src/utils/: fresh.ml  fresh.mli  identifier.ml  identifier.mli  identifier_set.ml  identifier_set.mli  location.ml  location.mli
tests/: dune  test_alpha_conversion.ml  test_ast.ml  test_beta_reduction.ml  test_evaluator.ml  test_free_variables.ml  test_identifier_set.ml  test_lambda.ml  test_substitution.ml  test_utils.ml
